# biofile

./: .gitignore  Cargo.toml
src/: bed.rs  bedgraph.rs  byte_chunk_iter.rs  error.rs  iter.rs  lib.rs  peak_file.rs  peak_format.rs  plink_bed.rs  plink_bim.rs  traits.rs  util.rs
src/bed/: bed_writer.rs  paired_end_collator.rs
src/plink_bed/: plink_snps.rs
src/traits/: trait_impl.rs
tests/: paired_end_test.bed
