[package]
name = "biofile"
version = "0.1.7"
authors = ["Aaron"]
edition = "2018"
license = "Apache-2.0"
description = "A library for reading bioinformatics related files"
repository = "https://github.com/Rustinante/biofile"

[dependencies]
ndarray = {version = "0.12.1"}
rayon = "1.1.0"
num = "0.2"
analytic = "0.2.3"

[dev-dependencies]
tempfile = "3.0.8"
ndarray-rand = "0.9.0"
rand = "0.6.5"
