[package]
name = "biofile"
version = "1.5.0"
authors = ["Aaron"]
edition = "2018"
license = "Apache-2.0"
description = "A library for reading bioinformatics related files"
repository = "https://github.com/Rustinante/biofile"

[dependencies]
clap = "2.33.3"
math = "0.8.8"
ndarray = {version = "0.12.1"}
num = "0.2"
program-flow = "0.1.3"
rayon = "1.1.0"

[dev-dependencies]
ndarray-rand = "0.9.0"
rand = "0.6.5"
tempfile = "3.0.8"
